--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-# Python-generated files
 __pycache__/
 *.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
-
-# Virtual environments
-.venv
-.python-version
+.venv/
 uv.lock
-README.md
-pyproject.toml
